Updated version of maven compiler and lwjgl, and added packaging settings to maven